# Gaveloc

./: Cargo.toml  LICENSE  README.md
apps/gaveloc_cli/: Cargo.toml
apps/gaveloc_cli/src/: main.rs
apps/gaveloc_patcher/: Cargo.toml
apps/gaveloc_patcher/src/: main.rs
apps/gaveloc_ui/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
apps/gaveloc_ui/src/: App.css  App.tsx  main.rs  vite-env.d.ts
apps/gaveloc_ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gaveloc_ui/src-tauri/capabilities/: default.json
apps/gaveloc_ui/src-tauri/src/: lib.rs  main.rs  state.rs
apps/gaveloc_ui/src-tauri/src/commands/: accounts.rs  auth.rs  integrity.rs  launcher.rs  mod.rs  news.rs  patching.rs  runners.rs  settings.rs  version.rs
apps/gaveloc_ui/src/components/: Icon.tsx  Modal.css  Modal.tsx  Titlebar.css  Titlebar.tsx
apps/gaveloc_ui/src/components/accounts/: AccountForm.css  AccountForm.tsx  AccountModal.css  AccountModal.tsx  AccountSwitcher.css  AccountSwitcher.tsx  LoginForm.css  LoginForm.tsx
apps/gaveloc_ui/src/components/game/: GameStatus.css  GameStatus.tsx
apps/gaveloc_ui/src/components/integrity/: IntegrityCheck.css  IntegrityCheck.tsx
apps/gaveloc_ui/src/components/launcher/: LaunchButton.css  LaunchButton.tsx
apps/gaveloc_ui/src/components/layout/: Footer.css  Footer.tsx  Layout.css  Layout.tsx  Sidebar.css  Sidebar.tsx
apps/gaveloc_ui/src/components/patching/: PatchProgress.css  PatchProgress.tsx
apps/gaveloc_ui/src/components/settings/: GameSettings.tsx  SettingsPage.css  SettingsPage.tsx  WineSettings.tsx
apps/gaveloc_ui/src/components/views/: Accounts.css  Accounts.tsx  ArticleModal.css  ArticleModal.tsx  Home.css  Home.tsx  NewsFeed.css  NewsFeed.tsx  Settings.css  Settings.tsx  SettingsWindow.css  SettingsWindow.tsx  Setup.css  Setup.tsx
apps/gaveloc_ui/src/hooks/: useIntegrityEvents.ts  usePatchEvents.ts
apps/gaveloc_ui/src/stores/: accountStore.ts  authStore.ts  gameStore.ts  integrityStore.ts  launchStore.ts  newsStore.ts  patchStore.ts  runnerStore.ts  settingsStore.ts  uiStore.ts
apps/gaveloc_ui/src/theme/: variables.css
apps/gaveloc_ui/src/types/: index.ts
apps/tauri_example/src-tauri/: tauri.conf.json
crates/gaveloc_adapters/: Cargo.toml
crates/gaveloc_adapters/src/: accounts.rs  config_repository.rs  configuration.rs  credentials.rs  fs.rs  game_detection.rs  lib.rs  network.rs  news.rs  oauth.rs  otp_listener.rs  prefix.rs  process.rs  runner.rs  telemetry.rs
crates/gaveloc_adapters/src/integrity/: checker.rs  mod.rs
crates/gaveloc_adapters/src/ipc/: client.rs  mod.rs  protocol.rs
crates/gaveloc_adapters/src/patch/: downloader.rs  mod.rs  server.rs  version.rs
crates/gaveloc_adapters/src/snapshots/: gaveloc_adapters__process__tests__all_wrappers_snapshot.snap  gaveloc_adapters__process__tests__gamescope_full_args_snapshot.snap
crates/gaveloc_adapters/src/zipatch/: mod.rs  parser.rs
crates/gaveloc_core/: Cargo.toml
crates/gaveloc_core/src/: config.rs  entities.rs  error.rs  launch_args.rs  lib.rs  ports.rs  use_cases.rs  zipatch.rs
crates/gaveloc_core/src/snapshots/: gaveloc_core__config__tests__default_settings_snapshot.snap  gaveloc_core__launch_args__tests__launch_args_snapshot_non_steam.snap  gaveloc_core__launch_args__tests__launch_args_snapshot_steam.snap
crates/gaveloc_core/src/use_cases/: login.rs  update_game.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_encryption.rs
