[package]
name = "gaveloc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gaveloc_core = { path = "../crates/gaveloc_core" }
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_encryption"
path = "fuzz_targets/fuzz_encryption.rs"
test = false
doc = false
bench = false
