[package]
name = "gaveloc_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gaveloc_core = { path = "../../crates/gaveloc_core" }
gaveloc_adapters = { path = "../../crates/gaveloc_adapters" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] } # Standard CLI argument parser
dotenvy = "0.15"
tracing = "0.1"
rpassword = "7"
dialoguer = "0.11"
directories = "5.0"
dirs = "5.0"
indicatif = "0.17"
tempfile = "3.23"
serde_json = "1.0"