[package]
name = "gaveloc_patcher"
version = "0.1.0"
edition = "2021"
description = "Isolated patcher process for Gaveloc FFXIV launcher"

[dependencies]
gaveloc_core = { path = "../../crates/gaveloc_core" }
gaveloc_adapters = { path = "../../crates/gaveloc_adapters" }
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2", features = ["tokio"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
