[package]
name = "gaveloc_adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
gaveloc_core = { path = "../gaveloc_core" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
tracing-log = "0.2"
config = { version = "0.13", features = ["toml"] }
directories = "5.0"
flate2 = "1.1.5"
tar = "0.4.44"
futures-util = "0.3.31"
shlex = "1.3"

# Authentication dependencies
keyring = "3"
regex = "1"
sha1 = "0.10"
hex = "0.4"
axum = "0.7"
hostname = "0.4"
whoami = "1.5"

[dev-dependencies]
tempfile = "3.23"
serial_test = "2.0"
rstest = { workspace = true }
insta = { workspace = true }

