[package]
name = "gaveloc_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add domain-specific dependencies here (e.g., serde, thiserror, chrono)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1" # Useful for defining async traits/ports
tracing = "0.1"
blowfish = "0.9"
block-padding = "0.3"
base64 = "0.21"
rand = "0.8"
generic-array = "0.14"
byteorder = "1.4"
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }