[package]
name = "gaveloc_ui"
version = "0.1.0"
description = "Gaveloc UI - A Tauri App"
authors = ["nano"]
edition = "2021"

[lib]
name = "gaveloc_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "fs"] }
toml = "0.8"
directories = "6"
gaveloc_core = { path = "../../../crates/gaveloc_core" }
gaveloc_adapters = { path = "../../../crates/gaveloc_adapters" }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
